Fix row-level results
+ additional syntax sugar
+ update example notebook

 Changes to be committed:
	modified: tsumugi-python/examples/basic_example.ipynb
	modified: tsumugi-python/tsumugi/analyzers.py
	modified: tsumugi-python/tsumugi/checks.py
	modified: tsumugi-python/tsumugi/verification.py
	modified: tsumugi-server/src/main/scala/com/ssinchenko/tsumugi/DeequUtils.scala

--- a/tsumugi-python/examples/basic_example.ipynb
+++ b/tsumugi-python/examples/basic_example.ipynb
@@ -94,20 +94,20 @@
    "outputs": [],
    "source": [
     "suite = (\n",
-    "    VerificationSuite.on_data(test_data)\n",
+    "    VerificationSuite\n",
+    "    .on_data(test_data) # add DataFrame\n",
+    "    .with_row_level_results() # mark that row-level results are required\n",
     "    .add_check(\n",
     "        CheckBuilder()\n",
-    "        .with_constraint(\n",
-    "            ConstraintBuilder()\n",
-    "            .for_analyzer(Size())\n",
-    "            .should_be_geq_than(3.0)\n",
-    "            .build()\n",
-    "        )\n",
-    "        .with_description(\"hasSize(lambda x: x >= 3)\")\n",
+    "        .with_description(\"Basic checks\")\n",
+    "        .has_size(expected_size=3.0, name=\"Size(*)\")\n",
+    "        .is_primary_key(column=\"b\", name=\"col(b) should be PK-like\")\n",
     "        .build()\n",
     "    )\n",
     "    .add_check(\n",
     "        CheckBuilder()\n",
+    "        .with_description(\"Additional checks\")\n",
+    "        .is_complete(column=\"c\", name=\"col(c) should be complete\")\n",
     "        .with_constraint(\n",
     "            ConstraintBuilder()\n",
     "            .for_analyzer(Minimum(column=\"b\"))\n",
@@ -181,24 +181,60 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>Warning</td>\n",
-       "      <td>hasSize(lambda x: x &gt;= 3)</td>\n",
-       "      <td></td>\n",
+       "      <td>Basic checks</td>\n",
+       "      <td>Value: 3 does not meet the constraint requirem...</td>\n",
        "      <td>Size</td>\n",
        "      <td>*</td>\n",
        "      <td>Dataset</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>Success</td>\n",
+       "      <td>3.000000</td>\n",
+       "      <td>Failure</td>\n",
        "      <td>SizeConstraint(Size(None))</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>Warning</td>\n",
+       "      <td>Basic checks</td>\n",
        "      <td></td>\n",
+       "      <td>Uniqueness</td>\n",
+       "      <td>b</td>\n",
+       "      <td>Column</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>Success</td>\n",
+       "      <td>UniquenessConstraint(Uniqueness(Buffer(b),None...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Warning</td>\n",
+       "      <td>Basic checks</td>\n",
+       "      <td></td>\n",
+       "      <td>Completeness</td>\n",
+       "      <td>b</td>\n",
+       "      <td>Column</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>Success</td>\n",
+       "      <td>CompletenessConstraint(Completeness(b,None,Som...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Warning</td>\n",
+       "      <td>Additional checks</td>\n",
+       "      <td>Value: 0.6666666666666666 does not meet the co...</td>\n",
+       "      <td>Completeness</td>\n",
+       "      <td>c</td>\n",
+       "      <td>Column</td>\n",
+       "      <td>0.666667</td>\n",
+       "      <td>Failure</td>\n",
+       "      <td>CompletenessConstraint(Completeness(c,None,Som...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Warning</td>\n",
+       "      <td>Additional checks</td>\n",
        "      <td>Value: 1.0 does not meet the constraint requir...</td>\n",
        "      <td>Minimum</td>\n",
        "      <td>b</td>\n",
        "      <td>Column</td>\n",
-       "      <td>1.0</td>\n",
+       "      <td>1.000000</td>\n",
        "      <td>Failure</td>\n",
        "      <td>MinimumConstraint(Minimum(b,None,Some(Analyzer...</td>\n",
        "    </tr>\n",
@@ -207,21 +243,33 @@
        "</div>"
       ],
       "text/plain": [
-       "     level          check_description  \\\n",
-       "0  Warning  hasSize(lambda x: x >= 3)   \n",
-       "1  Warning                              \n",
+       "     level  check_description  \\\n",
+       "0  Warning       Basic checks   \n",
+       "1  Warning       Basic checks   \n",
+       "2  Warning       Basic checks   \n",
+       "3  Warning  Additional checks   \n",
+       "4  Warning  Additional checks   \n",
        "\n",
-       "                                  constraint_message metric_name  \\\n",
-       "0                                                           Size   \n",
-       "1  Value: 1.0 does not meet the constraint requir...     Minimum   \n",
+       "                                  constraint_message   metric_name  \\\n",
+       "0  Value: 3 does not meet the constraint requirem...          Size   \n",
+       "1                                                       Uniqueness   \n",
+       "2                                                     Completeness   \n",
+       "3  Value: 0.6666666666666666 does not meet the co...  Completeness   \n",
+       "4  Value: 1.0 does not meet the constraint requir...       Minimum   \n",
        "\n",
        "  metric_instance metric_entity  metric_value   status  \\\n",
-       "0               *       Dataset           3.0  Success   \n",
-       "1               b        Column           1.0  Failure   \n",
+       "0               *       Dataset      3.000000  Failure   \n",
+       "1               b        Column      1.000000  Success   \n",
+       "2               b        Column      1.000000  Success   \n",
+       "3               c        Column      0.666667  Failure   \n",
+       "4               b        Column      1.000000  Failure   \n",
        "\n",
        "                                          constraint  \n",
        "0                         SizeConstraint(Size(None))  \n",
-       "1  MinimumConstraint(Minimum(b,None,Some(Analyzer...  "
+       "1  UniquenessConstraint(Uniqueness(Buffer(b),None...  \n",
+       "2  CompletenessConstraint(Completeness(b,None,Som...  \n",
+       "3  CompletenessConstraint(Completeness(c,None,Som...  \n",
+       "4  MinimumConstraint(Minimum(b,None,Some(Analyzer...  "
       ]
      },
      "execution_count": 10,
@@ -271,16 +319,43 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>hasSize(lambda x: x &gt;= 3)</td>\n",
+       "      <td>Basic checks</td>\n",
        "      <td>Warning</td>\n",
-       "      <td>Success</td>\n",
+       "      <td>Warning</td>\n",
        "      <td>SizeConstraint(Size(None))</td>\n",
+       "      <td>Failure</td>\n",
+       "      <td>Value: 3 does not meet the constraint requirem...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Basic checks</td>\n",
+       "      <td>Warning</td>\n",
+       "      <td>Warning</td>\n",
+       "      <td>UniquenessConstraint(Uniqueness(Buffer(b),None...</td>\n",
        "      <td>Success</td>\n",
        "      <td></td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1</th>\n",
+       "      <th>2</th>\n",
+       "      <td>Basic checks</td>\n",
+       "      <td>Warning</td>\n",
+       "      <td>Warning</td>\n",
+       "      <td>CompletenessConstraint(Completeness(b,None,Som...</td>\n",
+       "      <td>Success</td>\n",
        "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Additional checks</td>\n",
+       "      <td>Warning</td>\n",
+       "      <td>Warning</td>\n",
+       "      <td>CompletenessConstraint(Completeness(c,None,Som...</td>\n",
+       "      <td>Failure</td>\n",
+       "      <td>Value: 0.6666666666666666 does not meet the co...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Additional checks</td>\n",
        "      <td>Warning</td>\n",
        "      <td>Warning</td>\n",
        "      <td>MinimumConstraint(Minimum(b,None,Some(Analyzer...</td>\n",
@@ -292,17 +367,26 @@
        "</div>"
       ],
       "text/plain": [
-       "                       check check_level check_status  \\\n",
-       "0  hasSize(lambda x: x >= 3)     Warning      Success   \n",
-       "1                                Warning      Warning   \n",
+       "               check check_level check_status  \\\n",
+       "0       Basic checks     Warning      Warning   \n",
+       "1       Basic checks     Warning      Warning   \n",
+       "2       Basic checks     Warning      Warning   \n",
+       "3  Additional checks     Warning      Warning   \n",
+       "4  Additional checks     Warning      Warning   \n",
        "\n",
        "                                          constraint constraint_status  \\\n",
-       "0                         SizeConstraint(Size(None))           Success   \n",
-       "1  MinimumConstraint(Minimum(b,None,Some(Analyzer...           Failure   \n",
+       "0                         SizeConstraint(Size(None))           Failure   \n",
+       "1  UniquenessConstraint(Uniqueness(Buffer(b),None...           Success   \n",
+       "2  CompletenessConstraint(Completeness(b,None,Som...           Success   \n",
+       "3  CompletenessConstraint(Completeness(c,None,Som...           Failure   \n",
+       "4  MinimumConstraint(Minimum(b,None,Some(Analyzer...           Failure   \n",
        "\n",
        "                                  constraint_message  \n",
-       "0                                                     \n",
-       "1  Value: 1.0 does not meet the constraint requir...  "
+       "0  Value: 3 does not meet the constraint requirem...  \n",
+       "1                                                     \n",
+       "2                                                     \n",
+       "3  Value: 0.6666666666666666 does not meet the co...  \n",
+       "4  Value: 1.0 does not meet the constraint requir...  "
       ]
      },
      "execution_count": 11,
@@ -350,26 +434,50 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>Dataset</td>\n",
-       "      <td>*</td>\n",
-       "      <td>Size</td>\n",
-       "      <td>3.0</td>\n",
+       "      <td>Column</td>\n",
+       "      <td>c</td>\n",
+       "      <td>Completeness</td>\n",
+       "      <td>0.666667</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>Column</td>\n",
        "      <td>b</td>\n",
+       "      <td>Uniqueness</td>\n",
+       "      <td>1.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Dataset</td>\n",
+       "      <td>*</td>\n",
+       "      <td>Size</td>\n",
+       "      <td>3.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Column</td>\n",
+       "      <td>b</td>\n",
+       "      <td>Completeness</td>\n",
+       "      <td>1.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Column</td>\n",
+       "      <td>b</td>\n",
        "      <td>Minimum</td>\n",
-       "      <td>1.0</td>\n",
+       "      <td>1.000000</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "    entity instance     name  value\n",
-       "0  Dataset        *     Size    3.0\n",
-       "1   Column        b  Minimum    1.0"
+       "    entity instance          name     value\n",
+       "0   Column        c  Completeness  0.666667\n",
+       "1   Column        b    Uniqueness  1.000000\n",
+       "2  Dataset        *          Size  3.000000\n",
+       "3   Column        b  Completeness  1.000000\n",
+       "4   Column        b       Minimum  1.000000"
       ]
      },
      "execution_count": 12,
@@ -383,8 +491,87 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "130aad14-f3b9-41f4-b473-1949917f4ca4",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>a</th>\n",
+       "      <th>b</th>\n",
+       "      <th>c</th>\n",
+       "      <th>Basic checks</th>\n",
+       "      <th>Additional checks</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>foo</td>\n",
+       "      <td>1</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>bar</td>\n",
+       "      <td>2</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>baz</td>\n",
+       "      <td>3</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     a  b    c  Basic checks  Additional checks\n",
+       "0  foo  1  4.0          True              False\n",
+       "1  bar  2  6.0          True              False\n",
+       "2  baz  3  NaN          True              False"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "result.row_level_results.toPandas()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7106bbfc-9ec8-4556-8684-73c7488d26f1",
    "metadata": {},
    "outputs": [],
    "source": []
