Change the run dispatch mechanics
Instead of ask user for the spark session
the session attached to the data is used.

 Changes to be committed:
	modified: tsumugi-python/examples/basic_example.ipynb
	modified: tsumugi-python/tsumugi/verification.py

--- a/tsumugi-python/examples/basic_example.ipynb
+++ b/tsumugi-python/examples/basic_example.ipynb
@@ -126,7 +126,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "result = suite.run_with_spark_session(spark)"
+    "result = suite.run()"
    ]
   },
   {
@@ -491,7 +491,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "id": "130aad14-f3b9-41f4-b473-1949917f4ca4",
    "metadata": {},
    "outputs": [
@@ -559,7 +559,7 @@
        "2  baz  3  NaN          True              False"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
